# routes/events.mjs
@@ -8,15 +8,15 @@ const router = express.Router();
 
 /* Get Routes */
 
-router.get('/', /*#swagger.tags=["Events"]*/ec.getAllEvents);
-router.get('/:id', /*#swagger.tags=["Events"]*/ec.getEventById);
+router.get('/', ec.getAllEvents);
+router.get('/:id', ec.getEventById);
 
 /* Post Routes */
 
-router.post('/', /*#swagger.tags=["Events"] #swagger.start='events'*/ec.createEvent);
+router.post('/', ec.createEvent);
 
-router.patch('/:id', /*#swagger.tags=["Events"] */ec.updateEvent);
+router.patch('/:id', ec.updateEvent);
 
-router.delete('/:id', /*#swagger.tags=["Events"]*/ec.deleteEvent);
+router.delete('/:id', ec.deleteEvent);
 
 export default router;
