# server.mjs
@@ -1,8 +1,13 @@
 import express from "express";
+import cors from "cors";
 import "./config/loadEnv.mjs";
 import db from "./data/data.mjs";
 import morgan from "morgan";
 import router from "./routes/index.mjs";
+import events from "./routes/events.mjs";
+import users from "./routes/users.mjs";
+import timers from "./routes/timers.mjs";
+import routines from "./routes/routines.mjs";
 import passport from "passport";
 import session from "express-session";
 import './config/passport.mjs';
@@ -11,6 +16,7 @@ import './config/passport.mjs';
 db.connectDB()
 
 const app = express()
+app.use(cors());
 
 if (process.env.NODE_ENV === 'development') {
    app.use(morgan('dev'));
@@ -20,8 +26,11 @@ const PORT = process.env.PORT || 3000
 
 
 //ROUTES
-
-app.use('/', router)
+app.use('/events', events);
+app.use('/users', users);
+app.use('/timers', timers);
+app.use('/routines', routines);
+app.use('/', router);
 
 //MIDDLEWARE
 
